# peaks

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint-check.yml  test-installs.yml  unit-tests.yml
docs/: build_docs.sh  create_requirements.py  redirect.html
docs/peaks/: index.html
docs/peaks/AFM/: index.html
docs/peaks/ML/: clustering.html  denoise.html  index.html
docs/peaks/SRARPES/: index.html
docs/peaks/TRARPES/: index.html
docs/peaks/XMCD/: index.html
docs/peaks/core/: index.html
docs/peaks/diffraction/: index.html
docs/peaks/logbook/: beamline_dfns.html  index.html  logbook_UI.html  logbook_fns.html  metadata_loading.html
docs/peaks/structure/: index.html  structure_loading.html
docs/source/: conf.py  contributing.md  development.md  explanations.md  getting_started.md  index.md  user_guide.md
docs/source/_ext/: list_peaks_accessors.py
docs/source/_static/: ensure_ratio.css
docs/source/explanations/: angle_conventions.md  file_loaders.md
examples/: 1_getting_started.ipynb  4_Structure_BZs.ipynb  6_Logbook_maker.ipynb  7_TR_ARPES.ipynb
paper/: paper.bib  paper.md
peaks/: __init__.py  _lazy_import.py
peaks/AFM/: __init__.py
peaks/ML/: __init__.py  clustering.py  denoise.py  model91.pt
peaks/SARPES/: __init__.py
peaks/SRARPES/: __init__.py
peaks/TRARPES/: __init__.py
peaks/XMCD/: __init__.py
peaks/bz/: plotting.py  utils.py
peaks/core/: __init__.py  options.py
peaks/core/GUI/: __init__.py  displayGUI.py  pyqt_CircularListWidget.py  pyqt_CursorItem.py  pyqt_PlotWidgetKP.py  pyqt_ResizeItem.py  pyqt_WindowItem.py  pyqt_ZoomItem.py
peaks/core/LEED/: LEED_3d.py  LEED_cal.py  LEED_cal2.py  LEED_iv.py  LEED_load.py  LEED_q.py  RHEED_load.py  __init__.py  _cal_test_1.py  plotwidgetsignal.py  rot_disorder.py  rotate.py
peaks/core/accessors/: __init__.py  accessor_methods.py  dataarray_accessors.py  dataset_accessors.py  datatree_accessors.py
peaks/core/display/: DC_select.py  EELS_Bzone_planner.py  ROI.py  __init__.py  disp_from_hv.py  nanoARPES.py  plot_2d.py  plotting.py  readme.txt  trARPES.py  view.py
peaks/core/fileIO/: __init__.py  base_arpes_data_classes.py  (+10 more)
peaks/diffraction/: __init__.py
peaks/lab/: __init__.py
peaks/logbook/: __init__.py  beamline_dfns.py  client_secret.json  logbook_UI.py  logbook_fns.py  metadata_loading.py  readme.txt
peaks/other/: __init__.py
peaks/ptab/: __init__.py  ptable.py  readme.txt
peaks/structure/: __init__.py  structure_loading.py
peaks/time_resolved/: __init__.py  accessors.py  data_select.py  utils.py
peaks/utils/: OOP_method.py  __init__.py  accessors.py  align_util.py  angles.py  estimate_EF.py  get_angles.py  interpolation.py  metadata.py  misc.py  mp_API_key.txt  nano_slant_correct.py  readme.txt  structure.py  sum_spectra.py
peaks/xps/: __init__.py  core_level_BEs.pkl  core_levels.py  xc.pkl  xc_name.pkl
tests/: test_tutorials.sh
tutorials/: 1_getting_started.ipynb  2_plotting_data.ipynb  3_basic_data_operations.ipynb  3_data_fitting.ipynb  4_analysis_history.ipynb  4_data_processing.ipynb  5_data_fitting.ipynb  5_structure_BZs.ipynb  6_data_fitting.ipynb  7_TR_ARPES.ipynb  7_nanoARPES.ipynb  8_TR_ARPES.ipynb  8_structure_BZs.ipynb  9_XPS.ipynb
tutorials/.ipynb_checkpoints/: 0_testing-checkpoint.ipynb
tutorials/example_artemis_stats/: Info.tsv  Stat Log.tsv
(+273 files in other folders)
