[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "peaks"
description = "Python Electron Spectroscopy and Diffraction Analysis by King Group St Andrews"
requires-python = ">=3.12"
dependencies = [
        "ipykernel (>=6.25,<7)",
        "numpy (>=1.26,<2)",
        "matplotlib (>=3.8,<4)",
        "xarray (>=2023.9.0)",
        "dask[diagnostics] (>=2023.10.0)",
        "h5py (>=3.10,<4)",
        "tqdm (>=4.66,<5)",
        "scikit-learn (>=1.3,<2)",
        "natsort (>=8.4,<9)",
        "igor2 (>=0.5,<1)",
        "jupyterlab (>=4.2,<5)",
        ]
dynamic = ["version"]

[[project.authors]]
name = "Phil King"
email = "pdk6@st-andrews.ac.uk"

[[project.authors]]
name = "Brendan Edwards"
email = "be23@st-andrews.ac.uk"

[project.urls]
Source = "https://gitlab.st-andrews.ac.uk/physics-and-astronomy/king-group/peaks"
Issues = "https://gitlab.st-andrews.ac.uk/physics-and-astronomy/king-group/peaks/-/issues"
Documentation = "https://research.st-andrews.ac.uk/kinggroup/peaks/"

[project.optional-dependencies]
dev = [
        "black (>=24.2,<25)",
        "cookiecutter (>=2.5,<3)",
        "sphinx (>=7.2,<8)",
        "sphinx-copybutton (>=0.5,<1)",
        "sphinx-togglebutton (>=0.3,<1)",
        "sphinx-inline-tabs (>=2023)",
        "myst-parser (>=2.0,<3)",
        "furo (>=2024)",
        ]