[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "peaks"
description = "Python Electron Spectroscopy and Diffraction Analysis by King Group St Andrews"
requires-python = ">=3.12"
dependencies = [
        "ipykernel (>=6.25,<7)",
        "ipywidgets (>=8.1,<9)",
        "numpy (>=2.0,<3)",
        "matplotlib (>=3.9,<4)",
        "xarray (>=2024.6.0)",
        "pint-xarray (>=0.4,<1)",
        "dask[diagnostics] (>=2024.6.0)",
        "h5py (>=3.11,<4)",
        "tqdm (>=4.66,<5)",
        "scikit-learn (>=1.3,<2)",
        "natsort (>=8.4,<9)",
        "igor2 (>=0.5,<1)",
        "jupyterlab (>=4.2,<5)",
        "numbagg (>=0.8,<1)",
        "numba-progress (>=1.1,<2)",
        "numexpr (>=2.10, <3)",
        "hvplot (>=0.10,<1)",
        "pyqt6 (>=6.7,<7)",
        "pyqtgraph (>=0.13,<1)",
        "scikit-image (>=0.24,<1)",
        "jupyterlab",
        "pyperclip (>=1.9,<2)",
        "lmfit (>=1.3,<2)",
        "pydantic (>=2.9,<3)",
        "termcolor (>=2.5,<3)",
        "h5netcdf (>=1.4,<2)",
        "xarray-datatree (>=0.0.14,<1)",
        ]
dynamic = ["version"]

[[project.authors]]
name = "Phil King"
email = "pdk6@st-andrews.ac.uk"

[[project.authors]]
name = "Brendan Edwards"
email = "be23@st-andrews.ac.uk"

[project.urls]
Source = "https://gitlab.st-andrews.ac.uk/physics-and-astronomy/king-group/peaks"
Issues = "https://gitlab.st-andrews.ac.uk/physics-and-astronomy/king-group/peaks/-/issues"
Documentation = "https://research.st-andrews.ac.uk/kinggroup/peaks/"

[project.optional-dependencies]
dev = [
        "black (>=24.2,<25)",
        "cookiecutter (>=2.5,<3)",
        "sphinx (>=7.2,<8)",
        "sphinx-copybutton (>=0.5,<1)",
        "sphinx-togglebutton (>=0.3,<1)",
        "sphinx-inline-tabs (>=2023)",
        "sphinx-autoapi (>=3.1,<4)",
        "myst-parser (>=2.0,<3)",
        "myst-nb (>=1.1,<2)",
        "furo (>=2024)",
        ]
